# pywebhdfs

./: .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  LICENSE  README.md  README.rst  index.html  params.json  setup.cfg  setup.py  tox.ini
docs/source/: index.rst
example/: example.py
pywebhdfs/: operations.py  webhdfs.py
tests/: test_errors.py  test_webhdfs.py
